# Browser-DPO-Agent

./: .gitignore  CONTRIBUTING.md  DPO_Driver_Technical_Report.md  DPO_TRAINING_GUIDE.md  EXECUTION_SUMMARY.md  LICENSE  PHASE3_COMPLETION_SUMMARY.md  README.md  README_EN.md  README_ZH.md  TECHNICAL_REPORT.md  config.yaml  demo.py  pyproject.toml  run_tests.py  start_mlflow_ui.py  switch_to_chinese.bat  switch_to_english.bat
data/: sft_golden_samples.jsonl
docs/: LANGUAGE_SWITCH_GUIDE.md  README_EN.md  README_ZH.md
scripts/: 00_dpo_pressure_test.py  00_verify_setup.py  01_sft_training.py  02_collect_preferences.py  03_dpo_training.py  03_dpo_training_simple.py  04_evaluate_agent.py  04_evaluate_agent_demo.py  create_demo_gif.py  mock_dpo_training.py  run_pipeline.py  switch_language.py  test_dpo_setup.py
src/agent/: __init__.py  agent.py  base_model.py  dpo_module.py  inference_module.py  model.py  sft_module.py
src/environment/: interface.py
src/miniwob/: __init__.py  action.py  constants.py  dom.py  environment.py  fields.py  http_server.py  observation.py  registration.py  reward.py  screenshot.py  selenium_actions.py  selenium_instance.py  spaces.py
src/miniwob/envs/: flightwob_envs.py  miniwob_envs.py
src/miniwob/scripts/: gen_env_classes.py
src/utils/: checkpoint_manager.py  config.py  logger.py  mlflow_logger.py  reproducibility.py  warning_filters.py
tests/: test_action_parser.py  test_config.py  test_environment.py  test_modular_architecture.py  test_pipeline_integration.py
tools/: switch_to_chinese.bat  switch_to_english.bat
