[tool.poetry]
name = "dpo-driver"
version = "1.0.0"
description = "An AI agent for web automation, fine-tuned with Direct Preference Optimization."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.41.2"
trl = "^0.19.1"
peft = "^0.11.1"
accelerate = "^1.8.1"
selenium = "^4.21.0"
gymnasium = "^0.29.1"
webdriver-manager = "^4.0.1"
pyyaml = "^6.0.1"
pydantic = "^2.0.0"
mlflow = "^2.14.1"
psutil = "^5.9.0"
torch = {version = "^2.5.1+cu121", source = "pytorch"}
torchvision = {version = "^0.20.1+cu121", source = "pytorch"}
bitsandbytes = {version = "^0.41.2.post2", source = "bitsandbytes-win"}

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.10.0"
notebook = "^7.2.1"
pytest = "^8.2.2"
asciinema = "^2.4.0"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"


[[tool.poetry.source]]
name = "pytorch_bitsandbytes"
url = "https://jllllll.github.io/bitsandbytes-windows-webui"
priority = "explicit"


[[tool.poetry.source]]
name = "bitsandbytes-win"
url = "https://jllllll.github.io/bitsandbytes-windows-webui"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 